deploy: 7c3e86caeb1393a5a0220df45ca86a0327af1c0d

--- a/what_is_routee.html
+++ b/what_is_routee.html
@@ -426,13 +426,20 @@ document.write(`
  &#39;2012_Ford_Fusion&#39;,
  &#39;2016_AUDI_A3_4cyl_2WD&#39;,
  &#39;2016_BMW_328d_4cyl_2WD&#39;,
+ &#39;2016_BMW_i3_REx_PHEV_Charge_Depleting&#39;,
+ &#39;2016_BMW_i3_REx_PHEV_Charge_Sustaining&#39;,
  &#39;2016_CHEVROLET_Malibu_4cyl_2WD&#39;,
  &#39;2016_CHEVROLET_Spark_EV&#39;,
+ &#39;2016_CHEVROLET_Volt_Charge_Depleting&#39;,
+ &#39;2016_CHEVROLET_Volt_Charge_Sustaining&#39;,
+ &#39;2016_FORD_C-MAX_(PHEV)_Charge_Depleting&#39;,
+ &#39;2016_FORD_C-MAX_(PHEV)_Charge_Sustaining&#39;,
  &#39;2016_FORD_C-MAX_HEV&#39;,
  &#39;2016_FORD_Escape_4cyl_2WD&#39;,
  &#39;2016_FORD_Explorer_4cyl_2WD&#39;,
  &#39;2016_HYUNDAI_Elantra_4cyl_2WD&#39;,
- &#39;2016_Hyundai_Tucson_Fuel_Cell&#39;,
+ &#39;2016_HYUNDAI_Sonata_PHEV_Charge_Depleting&#39;,
+ &#39;2016_HYUNDAI_Sonata_PHEV_Charge_Sustaining&#39;,
  &#39;2016_KIA_Optima_Hybrid&#39;,
  &#39;2016_Leaf_24_kWh&#39;,
  &#39;2016_MITSUBISHI_i-MiEV&#39;,
@@ -444,6 +451,8 @@ document.write(`
  &#39;2016_Toyota_Prius_Two_FWD&#39;,
  &#39;2017_CHEVROLET_Bolt&#39;,
  &#39;2017_Maruti_Dzire_VDI&#39;,
+ &#39;2017_Prius_Prime_Charge_Depleting&#39;,
+ &#39;2017_Prius_Prime_Charge_Sustaining&#39;,
  &#39;2017_Toyota_Highlander_3&#39;,
  &#39;2020_Chevrolet_Colorado_2WD_Diesel&#39;,
  &#39;2020_VW_Golf_1&#39;,
