deploy: 56273046cd60bdbc63e39c0979c5ed62e78ac394

--- a/what_is_routee.html
+++ b/what_is_routee.html
@@ -526,7 +526,9 @@ document.write(`
  &#39;Toyota_Corolla_Cross_Hybrid&#39;,
  &#39;Toyota_Etios_Liva_diesel&#39;,
  &#39;Toyota_Hilux_Double_Cab_4WD&#39;,
- &#39;Toyota_Mirai&#39;]
+ &#39;Toyota_Mirai&#39;,
+ &#39;Transit_Bus_Battery_Electric&#39;,
+ &#39;Transit_Bus_Diesel&#39;]
 </pre></div>
 </div>
 </div>
